Running server on port 3000. Added some npm packages.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MEAN stack web app for viewing products.",
   "main": "app.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/rajashekarb-dev/avanthika.collections/issues"
   },
-  "homepage": "https://github.com/rajashekarb-dev/avanthika.collections#readme"
+  "homepage": "https://github.com/rajashekarb-dev/avanthika.collections#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
